fix text align left landing header

--- a/src/Components/LandingPageComponents/Hero/Hero.css
+++ b/src/Components/LandingPageComponents/Hero/Hero.css
@@ -20,3 +20,7 @@
 .btn {
 	margin-left: 0.5rem;
 }
+
+#welcomeHeader {
+	text-align: left;
+}
